Bugfixes - Add button fix with too many recipes - Recipe title longer - Long recipe title in toolbar out of screen - Adding category button more clear

--- a/src/app/recipes/recipe-input-fields/recipe-input-fields.component.css
+++ b/src/app/recipes/recipe-input-fields/recipe-input-fields.component.css
@@ -28,3 +28,6 @@
   margin-bottom: 17px !important;
 }
 
+.add-category-button {
+  margin-left: 12px;
+}
